--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,8 @@
   "manifest_version": 3,
   "description": "Lo que el ES debería ser.",
   "icons": { "128": "base/icon.png" },
-  "background": { "service_worker": "background.js" },
+  "background": {
+   "service_worker": "background-wrapper.js" },
   "options_ui" : {
     "page": "options/options.html"
   },"web_accessible_resources": [
