Corrección y adición IB al paso
Solucionado el problema que no permitía que se muestre el índice bélico al paso de día y cuántos días necesarios para volver a ser pacífico.

--- a/manifest.json
+++ b/manifest.json
@@ -92,7 +92,7 @@
 				"ciudad/infraestructura/class_elemento_edificios.js",
 				"ciudad/aplicacion/class_estrellas.js",
 				"ciudad/infraestructura/funciones.js",
-				"ws_ciudad.js",
+				/*"ws_ciudad.js",*/
 				"ciudad/ciudad.js"
 			]
 		},
