Revert "Avance con errores"
This reverts commit 9a3f8ef22e883b496ca8c7146499cead8a871be6.

--- a/manifest.json
+++ b/manifest.json
@@ -59,9 +59,8 @@
 			"js": [
 				"base/jquery.min.js",
 				"base/util.js",
-				"localstorage.js",
-				/*"cargaimperio.js",*/
 				"global.js",
+				"localstorage.js",
 				"base/datos.js",
 				"api.js",
 				"ws_atacar.js",
@@ -98,7 +97,7 @@
 		},
 		{
 			"matches": ["https://www.empire-strike.com/tuimperio.php"],
-			"js": ["base/jquery.min.js", "localstorage.js", "ws_imperio.js"]
+			"js": ["base/jquery.min.js", "ws_imperio.js"]
 		},
 		{
 			"matches": ["https://www.empire-strike.com/quest.php?*"],
