--- a/manifest.json
+++ b/manifest.json
@@ -59,8 +59,34 @@
 			"js": [
 				"base/jquery.min.js",
 				"base/util.js",
-				"global.js",
 				"localstorage.js",
+				"cargaimperio.js",
+				"global.js",
+				"base/datos.js",
+				"api.js",
+				"ws_atacar.js",
+				"ws_escogerObjectivo.js",
+				"ws_clanes.js",
+				"ws_clan.js",
+				"ws_informes.js",
+				"ws_ultimosAtaques.js",
+				"ws_comercio.js",
+				"ws_conflictos.js",
+				"ws_ranking.js",
+				"ws_mensajes.js",
+				"ws_gobierno.js",
+				"ws_movertropas.js",
+				"content.js"
+			]
+		},
+		{
+			"matches": ["*empire-strike.com/*"],
+			"js": [
+				"base/jquery.min.js",
+				"base/util.js",
+				"localstorage.js",
+				"cargaimperio.js",
+				"global.js",
 				"base/datos.js",
 				"api.js",
 				"ws_atacar.js",
